fixtures/invalid/bad-reference-missing-target.lmk
# Existing Section

@reference target="missing-section"
This reference points nowhere.
